// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers_subscriptions .cancel() should return a subscription instance 1`] = `
Subscription {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS",
      "type": "application/hal+json",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS/subscriptions/sub_rVKGtNd6s3",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "25.00",
  },
  "canceledAt": null,
  "createdAt": "2018-06-01T12:23:34+00:00",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "mandateId": null,
  "metadata": null,
  "method": null,
  "mode": "live",
  "nextPaymentDate": null,
  "resource": "subscription",
  "startDate": null,
  "status": "active",
  "times": 4,
  "timesRemaining": null,
  "webhookUrl": "https://webshop.example.org/subscriptions/webhook",
}
`;

exports[`customers_subscriptions .cancel() should work with a callback 1`] = `
Subscription {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS",
      "type": "application/hal+json",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS/subscriptions/sub_rVKGtNd6s3",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "25.00",
  },
  "canceledAt": null,
  "createdAt": "2018-06-01T12:23:34+00:00",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "mandateId": null,
  "metadata": null,
  "method": null,
  "mode": "live",
  "nextPaymentDate": null,
  "resource": "subscription",
  "startDate": null,
  "status": "active",
  "times": 4,
  "timesRemaining": null,
  "webhookUrl": "https://webshop.example.org/subscriptions/webhook",
}
`;

exports[`customers_subscriptions .create() should return a subscription instance 1`] = `
Subscription {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS",
      "type": "application/hal+json",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS/subscriptions/sub_rVKGtNd6s3",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "25.00",
  },
  "canceledAt": null,
  "createdAt": "2018-06-01T12:23:34+00:00",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "mandateId": null,
  "metadata": null,
  "method": null,
  "mode": "live",
  "nextPaymentDate": null,
  "resource": "subscription",
  "startDate": null,
  "status": "active",
  "times": 4,
  "timesRemaining": null,
  "webhookUrl": "https://webshop.example.org/subscriptions/webhook",
}
`;

exports[`customers_subscriptions .get() should return a subscription instance 1`] = `
Subscription {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS",
      "type": "application/hal+json",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS/subscriptions/sub_rVKGtNd6s3",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "25.00",
  },
  "canceledAt": null,
  "createdAt": "2018-06-01T12:23:34+00:00",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "mandateId": null,
  "metadata": null,
  "method": null,
  "mode": "live",
  "nextPaymentDate": null,
  "resource": "subscription",
  "startDate": null,
  "status": "active",
  "times": 4,
  "timesRemaining": null,
  "webhookUrl": "https://webshop.example.org/subscriptions/webhook",
}
`;

exports[`customers_subscriptions .list() should return a list of all customer subscriptions 1`] = `
Array [
  Subscription {
    "_links": Object {
      "customer": Object {
        "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS",
        "type": "application/hal+json",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS/subscriptions/sub_rVKGtNd6s3",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "25.00",
    },
    "canceledAt": null,
    "createdAt": "2018-06-01T12:23:34+00:00",
    "description": "Quarterly payment",
    "id": "sub_rVKGtNd6s3",
    "interval": "3 months",
    "mandateId": null,
    "metadata": null,
    "method": null,
    "mode": "live",
    "nextPaymentDate": null,
    "resource": "subscription",
    "startDate": null,
    "status": "active",
    "times": 4,
    "timesRemaining": null,
    "webhookUrl": "https://webshop.example.org/subscriptions/webhook",
  },
]
`;

exports[`customers_subscriptions .list() should work with a Promise and with .withParent() 1`] = `
Array [
  Subscription {
    "_links": Object {
      "customer": Object {
        "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS",
        "type": "application/hal+json",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS/subscriptions/sub_rVKGtNd6s3",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "25.00",
    },
    "canceledAt": null,
    "createdAt": "2018-06-01T12:23:34+00:00",
    "description": "Quarterly payment",
    "id": "sub_rVKGtNd6s3",
    "interval": "3 months",
    "mandateId": null,
    "metadata": null,
    "method": null,
    "mode": "live",
    "nextPaymentDate": null,
    "resource": "subscription",
    "startDate": null,
    "status": "active",
    "times": 4,
    "timesRemaining": null,
    "webhookUrl": "https://webshop.example.org/subscriptions/webhook",
  },
]
`;

exports[`customers_subscriptions .list() should work with a callback 1`] = `
Array [
  Subscription {
    "_links": Object {
      "customer": Object {
        "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS",
        "type": "application/hal+json",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/customers/cst_stTC2WHAuS/subscriptions/sub_rVKGtNd6s3",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "25.00",
    },
    "canceledAt": null,
    "createdAt": "2018-06-01T12:23:34+00:00",
    "description": "Quarterly payment",
    "id": "sub_rVKGtNd6s3",
    "interval": "3 months",
    "mandateId": null,
    "metadata": null,
    "method": null,
    "mode": "live",
    "nextPaymentDate": null,
    "resource": "subscription",
    "startDate": null,
    "status": "active",
    "times": 4,
    "timesRemaining": null,
    "webhookUrl": "https://webshop.example.org/subscriptions/webhook",
  },
]
`;
